# ud120-projects

choose_your_own/: class_vis.py  your_algorithm.py
datasets_questions/: explore_enron_data.py
decision_tree/: dt_author_id.py
feature_selection/: find_signature.py
final_project/: README.md  Report.md  poi_id.py  pyproject.toml  referencias.md  requirements.txt  tester.py  tools_fp.py
final_project/results/: adaresults.html  dtcresults.html  gnbresults.html  kncresults.html  rfcresults.html  svcresults.html
k_means/: k_means_cluster.py
naive_bayes/: nb_author_id.py
outliers/: enron_outliers.py  outlier_cleaner.py  outlier_removal_regression.py
pca/: eigenfaces.py
regression/: finance_regression.py
svm/: svm_author_id.py
text_learning/: vectorize_text.py
tools/: email_preprocess.py  feature_format.py  parse_out_email_text.py  startup.py
validation/: evaluate_poi_identifier.py  validate_poi.py
