[tool.poetry]
name = "final_project"
version = "0.1.0"
description = "My Udacity Fundamentals of Data Science II final project."
authors = ["Thiago Prado <trprado@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
scikit-learn = "^0.20.2"
numpy = "^1.16"
pandas = "^0.24.1"
seaborn = "^0.9.0"
matplotlib = "^3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.2"
ipython = "^7.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
